kube/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: crispyfish-demo
  name: crispyfish-demo
  namespace: crispyfish-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: crispyfish-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crispyfish-demo
    spec:
      containers:
      - image: crispyfish-demo:latest
        imagePullPolicy: IfNotPresent
        name: crispyfish-demo
