kube/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: crispyfish-demo
  name: crispyfish-demo
  namespace: crispyfish-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: crispyfish-demo
  sessionAffinity: None
  type: ClusterIP
