kube/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/name: crispyfish-demo
  name: crispyfish-demo
  namespace: crispyfish-demo
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: crispyfish-demo
            port:
              number: 80
        path: /
        pathType: Prefix
